--- a/client_code/New/form_template.yaml
+++ b/client_code/New/form_template.yaml
@@ -6,13 +6,14 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: never, col_spacing: medium, spacing_above: small, col_widths: '{}', spacing_below: small,
+    wrap_on: never, col_spacing: none, spacing_above: small, col_widths: '{}', spacing_below: small,
     background: ''}
   name: column_panel_1
   layout_properties: {grid_position: 'QHRNJM,VWZSSL', full_width_row: true}
   components:
   - type: GridPanel
-    properties: {}
+    properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
+      border: '', visible: true, role: null, tooltip: ''}
     name: grid_panel_1
     layout_properties: {grid_position: 'QRCWNC,LRFPDC', full_width_row: true}
     components:
