Edited theme.css and theme/parameters.yaml

--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -44,6 +44,8 @@ roles:
 - {name: star-button}
 - {name: green-filled-button}
 - {name: filter-button}
+- name: narrow
+  components: [gridpanel]
 color_scheme:
   preset_groups:
   - name: Colour Scheme
