--- a/client_code/Homepage/RowTemplate1/form_template.yaml
+++ b/client_code/Homepage/RowTemplate1/form_template.yaml
@@ -6,7 +6,10 @@ container:
     italic: false, background: '', bold: false, underline: false}
 components:
 - type: Link
-  properties: {col_widths: '{"OYYRAS":30}'}
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: medium,
+    spacing_above: small, icon_align: left, col_widths: '{"OYYRAS":30}', spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_1
   layout_properties: {column: YBLVEX}
   event_bindings: {click: jobreport_click}
@@ -52,7 +55,10 @@ components:
   - {property: text, code: 'self.item[''latest_assignee''][''name''] if self.item[''latest_assignee'']
       else ''---'''}
 - type: Link
-  properties: {col_widths: '{}'}
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: medium,
+    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_2
   layout_properties: {column: FUNZSD}
   components:
@@ -84,7 +90,7 @@ components:
   event_bindings: {change: update_item}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: Add to watchlist, border: '',
-    foreground: '', visible: true, text: '', font_size: null, wrap_on: mobile, font: '',
+    foreground: '', visible: true, text: '', font_size: null, wrap_on: never, font: '',
     col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '{}',
     spacing_below: small, italic: false, background: '', bold: false, underline: false,
     icon: ''}
