--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -572,12 +572,12 @@ components:
         components:
         - type: TextBox
           properties: {role: outlined, align: left, hide_text: false, tooltip: '',
-            placeholder: 'Search reference, brand or customer', border: none, enabled: true,
-            foreground: '', visible: true, text: '', font_size: 14, font: '', spacing_above: medium,
-            type: text, spacing_below: medium, italic: false, background: '', bold: false,
-            underline: false}
+            placeholder: 'Search job, reference, brand or customer', border: none,
+            enabled: true, foreground: '', visible: true, text: '', font_size: 14,
+            font: '', spacing_above: medium, type: text, spacing_below: medium, italic: false,
+            background: '', bold: false, underline: false}
           name: text_box_search
-          layout_properties: {grid_position: 'HCNRPB,MYRKTJ', x: 0, y: 9, width: 318.297}
+          layout_properties: {grid_position: 'HCNRPB,MYRKTJ', x: 0, y: 9, width: 286.297}
           event_bindings: {pressed_enter: filter_change}
         - type: Button
           properties: {role: filled-button, align: left, tooltip: '', border: '',
