Created map-header-background-1920x250 2x.png, React.png and map-header-background-1920x1080 2x.png; Edited Homepage

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -12,8 +12,10 @@ unique_ids:
     ServerModule1: '1687138212883237411144622.2109'
   assets:
     resolved.jpg: '1689837706175227050273626.58514'
+    map-header-background-1920x250 2x.png: '169353711169862786806216.93366'
     RadaroLogo_CircleBlackLow-noBG-logo.png: '1692925008899659940331929.7946'
     theme.css: OGFNOPXCPEXK6NN4XFYKC2MLE3QBBHDG
+    React.png: '1693537069271117151613358.35434'
     Electrolux.png: '1689822058367482418863446.6455'
     Star outline.png: '1690348751854896416192445.363'
     comment.png: '168913302064741437623884.82086'
@@ -23,6 +25,7 @@ unique_ids:
     standard-page.html: GMPM3KEVMDU4OOJNM5N7GZETSM3G5FAX
     RadaroLogo_CircleBlackLow-noBG.png: '1692924995648301698256708.2134'
     Star filled.png: '1690342439494325066670921.82104'
+    map-header-background-1920x1080 2x.png: '1693537117500697531121728.9857'
     Star 1.png: '1690342429864212008225367.0068'
     pending.jpg: '168983772402062089185977.70818'
     failed.jpg: '1689837690464959181668823.6917'
