--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -463,7 +463,7 @@ components:
   components:
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: never, col_spacing: medium, spacing_above: none, col_widths: '{"IFEVYM":40,"VYNMKS":15,"GSLOXW":15}',
+      wrap_on: never, col_spacing: medium, spacing_above: none, col_widths: '{"VYNMKS":15,"GSLOXW":15}',
       spacing_below: none, background: ''}
     name: column_panel_1
     layout_properties: {width: null, expand: true}
@@ -487,14 +487,12 @@ components:
           slot: top-left-btn
           full_width_row: false
         name: image_1
-    - type: Label
-      properties: {role: headline, align: center, tooltip: '', border: '', foreground: '',
-        visible: true, text: REACT, font_size: 32, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-        underline: false, icon: ''}
-      layout_properties: {grid_position: 'MPINBT,IFEVYM', row: BTNFSF, width_xs: 4,
-        col_xs: 3, width: 303.328, slot: title, full_width_row: false}
-      name: label_1
+    - type: Image
+      properties: {role: null, vertical_align: center, height: 64, tooltip: '', border: '',
+        foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: none,
+        source: _/theme/React.png, spacing_below: none, background: '', horizontal_align: center}
+      name: image_3
+      layout_properties: {grid_position: 'MPINBT,UGWODW', full_width_row: false}
     - type: ColumnPanel
       properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
         wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{}',
